# valk

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  Dockerfile.cross  README.md  index.html  pyproject.toml
.dev/: build.py
.github/: build-subspaced-binary.yaml
.github/workflows/: build-chromium-demo.yaml  build-cuse-synapse.yaml  build-cused-binary.yaml  build-subspaced-binary.yaml  build-valk-server.yaml  python-integration-tests.yaml  python-lint.yaml  release.yaml  ruff.yaml  test-python.yaml
client/: README.md  pyproject.toml
client/examples/: start_computer.py
client/subspace/: computer.py  debug_viewer.py
computeruse/: computer.py
cuse/: computer.py  debug_viewer.py
cuse-synapse/: .gitignore  README.md
cuse-synapse/src/: main.rs  monitor.rs
cuse/integrations/: anthropic.py
cused/: Cargo.toml  README.md
cused/docker-examples/chromium-demo/: Dockerfile
cused/src/: action_queue.rs  config.rs  key_press.rs
daemon/: .gitignore  Dockerfile.cross  README.md
daemon/subspaced/: Cargo.toml  Cross.toml
daemon/subspaced/src/: action_queue.rs  config.rs  main.rs  monitor.rs
examples/: anthropic_quickstart.py  openai_cua.py  openai_quickstart.py  start_computer.py
src/: action_queue.rs  config.rs  key_press.rs  main.rs
tests/: conftest.py  test_computer.py  test_integration.py
valk/: computer.py  debug_viewer.py
valk-server/: .gitignore  Cargo.toml  Cross.toml  README.md
valk-server/docker-examples/chromium-demo/: Dockerfile  entrypoint.sh
valk-server/docker-examples/ubuntu-desktop/: Dockerfile  entrypoint.sh
valk-server/src/: action_queue.rs  action_types.rs  config.rs  key_press.rs  main.rs  monitor.rs  session.rs  system_info.rs
valk/integrations/: anthropic.py
valk/static/: viewer.html
