[package]
name = "subspaced"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
base64 = "0.22.1"
image = "0.25.5"
rdev = "0.5.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
xcap = "0.2.2"
