[project]
name = "valk"
version = "0.0.1"
description = "Remote control of a computer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.1",
]
license = "MIT"

[tool.hatch.build.targets.wheel]
packages = ["valk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
examples = [
    "anthropic>=0.45.2",
]

[project.urls]
Repository = "https://github.com/ercbot/valk"
