[project]
name = "valk"
version = "0.0.2"
description = "Remote control of a computer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.1",
]
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["valk"]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
examples = [
    "anthropic>=0.45.2",
]
tests = [
    "docker>=7.1.0",
    "pillow>=11.1.0",
    "pytest>=8.3.4",
]

[project.urls]
Repository = "https://github.com/ercbot/valk"

[tool.ruff.lint]
select = [
    "I", # isort
]