[project]
name = "valk"
version = "0.1.0"
description = "Simple, observable computer use - Remote desktop for AI agents "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Topic :: System :: Operating System",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces"
]
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["valk"]

[tool.hatch.build.targets.wheel.force-include]
"valk/static/viewer.html" = "valk/static/viewer.html"

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
examples = [
    "anthropic>=0.45.2",
    "requests>=2.32.3",
]
tests = [
    "docker>=7.1.0",
    "pillow>=11.1.0",
    "pytest-httpserver>=1.1.1",
    "pytest>=8.3.4",
]

[project.urls]
Repository = "https://github.com/ercbot/valk"

[tool.ruff.lint]
select = [
    "I", # isort
]
