[package]
name = "cused"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
base64 = "0.22.1"
enigo = "0.3.0"
image = "0.25.5"
os_info = "3.9.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3.19"
xcap = "0.2.2"
